@@ -4,7 +4,7 @@ config MODULES
 
 config RTAI_VERSION
 	string
-	default "O.6.5 (fusion)"
+	default "O.6.6 (fusion)"
 
 menu "General"
 
