@@ -1,11 +1,11 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.59)
 
-AC_INIT(fusion,0.6.5,rpm@xenomai.org)
+AC_INIT(fusion,0.6.6,rpm@xenomai.org)
 
 CONFIG_RTAI_VERSION_MAJOR=0
 CONFIG_RTAI_VERSION_MINOR=6
-CONFIG_RTAI_REVISION_LEVEL=5
+CONFIG_RTAI_REVISION_LEVEL=6
 
 AC_CONFIG_HEADERS(rtai_config.h)
 AC_CONFIG_AUX_DIR(config/autoconf)
