@@ -24,7 +24,7 @@ void foo (void)
     rt_mutex_lock(&mutex_desc);
 
     while (!shared_event && !err)
-	err = rt_cond_wait(&cond_desc,&mutex_desc,RT_TIME_INFINITE);
+	err = rt_cond_wait(&cond_desc,&mutex_desc,TM_INFINITE);
     
     rt_mutex_unlock(&mutex_desc);
 
